--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <title>Мой учебный сайт — Главная</title>
 </head>
 <body>
-  <h1>Добро пожаловать</h1>
-  <p>Навигация:</p>
+  <h1>Добро пожаловать!</h1>
+  <p>Выберите язык:</p>
   <ul>
     <li><a href="./ru/index.html">Русская версия</a></li>
     <li><a href="./en/index.html">English version</a></li>
   </ul>
-  <p>Версии (пример):</p>
-  <ul id="versions">
-    <!-- опционально: можно динамически заполнять -->
-    <li><a href="/REPO_NAME/v1.0/">v1.0</a></li>
+
+  <h2>Версии сайта:</h2>
+  <ul>
+    <!-- ссылки на версии -->
+    <li><a href="https://nikitaaa2619.github.io/my-gh-pages-site/v1.0/">Версия v1.0</a></li>
   </ul>
 </body>
 </html>
