--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <h1>Добро пожаловать</h1>
   <p>Навигация:</p>
   <ul>
-    <li><a href="./ru/index.html">Русская версия</a></li>
-    <li><a href="./en/index.html">English version</a></li>
+    <li><a href="ru/index.html">Русская версия</a></li>
+    <li><a href="en/index.html">English version</a></li>
   </ul>
   <p>Версии (пример):</p>
   <ul id="versions">
-    <!-- опционально: можно динамически заполнять -->
-    <li><a href="/REPO_NAME/v1.0/">v1.0</a></li>
+    <li><a href="v1.0/">v1.0</a></li>
   </ul>
 </body>
 </html>
